--- a/index.html
+++ b/index.html
@@ -88,14 +88,15 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Natthawat Pomsuwan</span></p>
+                        <p><span class="title-s">Date of Birth: </span> <span>6 November 2002</span></p>
                         <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                        <p><span class="title-s">Email: </span> <span>natthawat.psw@gmail.com</span></p>
+                        <p><span class="title-s">Phone: </span> <span>06x-xxx-xxxx</span></p>
                       </div>
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Skill</p>
+                    <p class="title-s">Skills</p>
                     <span>HTML</span> <span class="pull-right">65%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="65"
