--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skills</p>
-                    <span>HTML</span> <span class="pull-right">65%</span>
+                    <span>HTML</span> <span class="pull-right">70%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="65"
+                      <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70"
                         aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>CSS3</span> <span class="pull-right">25%</span>
@@ -115,6 +115,16 @@
                     <span>JAVASCRIPT</span> <span class="pull-right">40%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40"
+                        aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>R</span> <span class="pull-right">70%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70"
+                        aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>MySQL</span> <span class="pull-right">85%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85"
                         aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
