--- a/java.html
+++ b/java.html
@@ -106,6 +106,12 @@
     <hr>
     <h2>Pie Chart</h2>
     <canvas id="myChart1"></canvas>
+
+    <form method="POST" action="https://script.google.com/macros/s/AKfycbzWIEutxqQvGHcVORRjoNW9pjiyQMjVNxdG9K4LkcS-If45rMqJVFyD2t7R8uSv5-hIZA/exec">
+      <input name="email" type="email" placeholder="Email" required>
+      <input name="name" type="text" placeholder="Name" required>
+      <button type="submit">Send</button>
+    </form>
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
