--- a/api.html
+++ b/api.html
@@ -65,11 +65,40 @@
 
   <main id="main">
     <h1>API</h1>
-
     <hr>
-    <h2>Click to change</h2>
+
+    <h2>Change</h2>
     <p id="demo2">Hi</p>
     <button onclick="myFunction()">Click me</button>
+    <hr>
+
+    <h1>Random Dog Image</h1>
+    <button onclick="fetchRandomDog()">Get Random Dog</button>
+    <img id="dogImage" width="400" height="300" src="" alt="Random Dog" style="display:none;">
+    <hr>
+
+    <h2>Contact</h2>
+    <form method="POST"
+      action="https://script.google.com/macros/s/AKfycbzzCIaak2zPYGjWNT65o7ybMgPM4rJJ4EJwyhL76WBih-c2N4UoiwVtsALlUsY9pu2ykg/exec">
+      <input name="Email" type="email" placeholder="Email" required>
+      <input name="Name" type="text" placeholder="Name" required>
+      <button type="submit">Send</button>
+    </form>
+    <hr>
+
+    <h2>Nationalize API Demo</h2>
+    <form id="nameForm">
+      <label for="name">Enter your name:</label>
+      <input type="text" id="name" name="name" required>
+      <button type="button" onclick="fetchNationality()">Submit</button>
+    </form>
+    <div id="result"></div>
+    <hr>
+
+    <h2>Coinbase API Demo</h2>
+    <div id="lastUpdateTime"></div>
+    <div id="prices"></div>
+    <hr>
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -113,7 +142,7 @@
 
 
     function myFunction() {
-      fetch("https://catfact.ninja/fact")
+      fetch("https://official-joke-api.appspot.com/random_joke")
         .then(function (response) {
           return response.json()
         })
@@ -128,6 +157,105 @@
         })
     }
   </script>
+
+  <script>
+    function fetchRandomDog() {
+      // Fetch data from the API
+      fetch('https://random.dog/woof.json')
+        .then(response => response.json())
+        .then(data => {
+          const url = data.url;
+
+          // Update the image source with the fetched URL
+          document.getElementById('dogImage').src = url;
+
+          // Display the image
+          document.getElementById('dogImage').style.display = 'block';
+        })
+        .catch(error => {
+          console.error('Error fetching random dog:', error);
+        });
+    }
+  </script>
+
+  <script>
+    function fetchNationality() {
+      var name = document.getElementById('name').value;
+      if (name.trim() === "") {
+        alert("Please enter a name");
+        return;
+      }
+
+      fetch(`https://api.nationalize.io?name=${name}`)
+        .then(response => response.json())
+        .then(data => {
+          displayResult(data);
+        })
+        .catch(error => {
+          console.error('Error fetching data:', error);
+          alert('Error fetching data. Please try again.');
+        });
+    }
+
+    function displayResult(data) {
+      var resultDiv = document.getElementById('result');
+      var countryData = data.country[0];
+
+      if (countryData) {
+        var countryId = countryData.country_id;
+        var probability = (countryData.probability * 100).toFixed(2);
+        resultDiv.innerHTML = `<p>Your most likely country is ${countryId} with a probability of ${probability}%.</p>`;
+      } else {
+        resultDiv.innerHTML = "<p>No data available for the provided name.</p>";
+      }
+    }
+  </script>
+
+  <script>
+    function fetchPrices() {
+      var now = new Date();
+      var currentTime = now.toLocaleTimeString();
+
+      fetch('https://api.coinbase.com/v2/exchange-rates?currency=USDT')
+        .then(response => response.json())
+        .then(data => {
+          displayPrices(data);
+          displayLastUpdateTime(currentTime);
+        })
+        .catch(error => {
+          console.error('Error fetching data:', error);
+          alert('Error fetching data. Please try again.');
+        });
+    }
+    function displayPrices(data) {
+      var pricesDiv = document.getElementById('prices');
+      var rates = data.data.rates;
+
+      var currencies = ['1INCH', 'AAVE', 'ABT', 'ACH', 'ACS', 'ADA', 'AED', 'BTC', 'ETH'];
+      var pricesHtml = '<p>1 USDT can buy:</p><ul>';
+
+      currencies.forEach(currency => {
+        if (rates[currency]) {
+          pricesHtml += `<li>${currency}: ${rates[currency]}</li>`;
+        } else {
+          pricesHtml += `<li>${currency}: N/A</li>`;
+        }
+      });
+
+      pricesHtml += '</ul>';
+      pricesDiv.innerHTML = pricesHtml;
+    }
+
+    function displayLastUpdateTime(currentTime) {
+      var updateTimeDiv = document.getElementById('lastUpdateTime');
+      updateTimeDiv.innerHTML = `<p>Last Update Time: ${currentTime}</p>`;
+    }
+
+    fetchPrices();
+
+    setInterval(fetchPrices, 10000);
+  </script>
+
 </body>
 
 </html>
